chore: quick finish

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
                 <div class="section part1">
                     <div class="part-outer">
                         <div class="part-inner">
+                            <div class="page-tab">
+
+                            </div>
                             <h1 class="part1-title">Hello World!</h1>
                             <div class="part1-line"></div>
-                            <h2 class="part1-desc">嗨~ 你好呀！欢迎来到我的咖啡屋<span>(Cafe)</span>，
-                                <br>我是Coffee，正在努力成为一个有趣的全栈开发工程师。</h2>
+                            <h2 class="part1-desc"></h2>
                             <h3 class="part1-small-text">
                                  <p class="head-text"></p>
                             </h3>
@@ -106,7 +108,9 @@
 
                 <div class="section part3">
                     <div class="part-outer">
-                        <div class="part-inner"></div>
+                        <div class="part-inner">
+
+                        </div>
                     </div>
                 </div>
 
@@ -136,7 +140,6 @@
         <script src="./js/libs/jquery.min.js"></script>
         <script src="./js/libs/typed.min.js"></script>
         <script src="./js/libs/jquery.fullpage.min.js"></script>
-        <script src="./js/libs/jquery-easing.min.js"></script>
         <script src="./js/libs/message.min.js"></script>
 
         <!-- Project JS Link -->
