feat: update dom render

--- a/index.html
+++ b/index.html
@@ -1,152 +1,116 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-		<meta name="format-detection" content="telephone=no">
-		<meta content="yes" name="apple-mobile-web-app-capable">
-		<meta content="yes" name="mobile-web-app-capable">
-		<meta name="robots" content="all">
-		<meta name="Copyright" content="FengmStudio" />
-		<meta name="author" content="FengmStudio-CaFe" />
-		<meta name="Description" content="CoffeeShop,即咖啡厅,是一个萌新程序员的全静态个人简历网站" />
-		<meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站,Jquery.fullpage" />
-		<title>Cafe - 咖啡の个人简历网站</title>
-		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
-        <!-- CSS External Link -->
-        <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/Swiper/8.3.0/swiper-bundle.css">
-        <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/fullPage.js/3.0.9/fullpage.css">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="mobile-web-app-capable">
+    <meta name="robots" content="all">
+    <meta name="Copyright" content="FengmStudio" />
+    <meta name="author" content="FengmStudio-CaFe" />
+    <meta name="Description" content="CoffeeShop,即咖啡厅,是一个萌新程序员的全静态个人简历网站" />
+    <meta name="Keywords" content="个人网站,咖啡厅,Coffee_Shop,Cafe_shop,个人简历,独立网站,Jquery.fullpage" />
+    <title>Cafe - 咖啡の个人简历网站</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
-        <!-- CSS Project Link -->
-        <link rel="stylesheet" href="./css/message.css">
-		<link rel="stylesheet" href="./css/common.css">
-		<link rel="stylesheet" href="./css/index.css" media="screen and (min-device-width: 1025px)">
-        <link rel="stylesheet" href="./css/index-m.css" media="screen and (max-device-width: 1024px)">
-        
-	</head>
-	
-	<body>
-        <h1 class="hide-text">Cafe - 咖啡の个人简历网站</h1>
+    <!-- CSS External Link -->
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/Swiper/8.3.0/swiper-bundle.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/fullPage.js/3.0.9/fullpage.css">
 
-        <div class="wrap">
-            <div class="content" id="content">
-                <div class="section part1">
-                    <div class="part-outer">
-                        <div class="part-inner">
-                            <div class="page-tab">
+    <!-- CSS Project Link -->
+    <link rel="stylesheet" href="./css/message.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css" media="screen and (min-device-width: 1025px)">
+    <link rel="stylesheet" href="./css/index-m.css" media="screen and (max-device-width: 1024px)">
 
-                            </div>
-                            <h1 class="part1-title">Hello World!</h1>
-                            <div class="part1-line"></div>
-                            <h2 class="part1-desc"></h2>
-                            <h3 class="part1-small-text">
-                                 <p class="head-text"></p>
-                            </h3>
-                        </div>
-                    </div>
-                </div>
+</head>
 
-                <div class="section part2">
-                    <div class="part-outer">
-                        <div class="part-inner">
-                            <div class="part2-left">
-                                <div class="user-cover">
-                                    <img src="./images/cover.jpg" alt="">
-                                </div>
-                                <div class="user-info">
-                                    <div class="user-item user-name"> <span>昵称 :</span> 咖啡</div>
-                                    <div class="user-item user-age"> <span>年龄 :</span> 20</div>
-                                    <div class="user-item user-work"> <span>工作年限 :</span> 7 month</div>
-                                    <div class="user-item user-occ"> <span>当前职位 :</span> 前端开发</div>
-                                    <div class="user-item user-occ"> <span>现居城市 : </span> 广东深圳</div>
-                                </div>
-                            </div>
-                            <div class="part2-line"></div>
-                            <div class="part2-right">
-<!--                                <h1 class="part2-title">basic info</h1>-->
-                                <div class="detail-list">
-                                    <div class="detail-item wx">
-                                        <span class="text-key">微信号 :</span>
-                                        <div class="center-mask"></div>
-                                        <p class="text-value">Coffee2333</p>
-                                    </div>
-                                    <div class="detail-item qq">
-                                        <span class="text-key">Q Q号 :</span>
-                                        <div class="center-mask"></div>
-                                        <p class="text-value">1691810090</p>
-                                    </div>
-                                    <div class="detail-item email">
-                                        <span class="text-key">邮箱 :</span>
-                                        <div class="center-mask"></div>
-                                        <p class="text-value">zaiqiao2481@163.com</p>
-                                    </div>
-                                    <div class="detail-item phone">
-                                        <span class="text-key">手机号 :</span>
-                                        <div class="center-mask"></div>
-                                        <p class="text-value">17336668888</p>
-                                    </div>
-                                    <div class="detail-item lang">
-                                        <span class="text-key">擅长语言 :</span>
-                                        <div class="center-mask"></div>
-                                        <p class="text-value">Java、JavaScript、Python</p>
-                                    </div>
-                                    <div class="detail-item school">
-                                        <span class="text-key">教育背景 :</span>
-                                        <div class="center-mask"></div>
-                                        <p class="text-value">2023届潮汕职业技术学院(专科)</p>
-                                    </div>
-                                </div>
-                                <div class="self-intro">
+<body>
+    <h1 class="hide-text">Cafe - 咖啡の个人简历网站</h1>
 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="section part3">
-                    <div class="part-outer">
-                        <div class="part-inner">
+    <div class="wrap">
+        <div class="content" id="content">
+            <div class="section part1">
+                <div class="part-outer">
+                    <div class="part-inner">
+                        <div class="page-tab">
 
                         </div>
+                        <h1 class="part1-title">Hello World!</h1>
+                        <div class="part1-line"></div>
+                        <h2 class="part1-desc"></h2>
+                        <h3 class="part1-small-text">
+                            <p class="head-text"></p>
+                        </h3>
                     </div>
                 </div>
-
-                <div class="section part4">
-                    <div class="part-outer">
-                        <div class="part-inner"></div>
-                    </div>
-                </div>
-
             </div>
 
-            <!-- 弹窗区域 -->
-            <div class="pop-model" id="pop-story">
-                <div class="pop-story-cont">
-                    <a class="pop-close" href="javascript:closePop('pop-story')">×</a>
+            <div class="section part2">
+                <div class="part-outer">
+                    <div class="part-inner">
+                        <div class="part2-left">
+                            <div class="user-cover">
+                                <img src="./images/cover.jpg" alt="">
+                            </div>
+                            <div class="user-info"></div>
+                        </div>
+                        <div class="part2-line"></div>
+                        <div class="part2-right">
+                            <!-- <h1 class="part2-title">basic info</h1>-->
+                            <div class="detail-list"></div>
+                            <div class="self-intro">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="pop-model" id="ie-pop">
-                <div class="pop-story-cont">
-                    <a class="pop-close" href="javascript:closePop('pop-story')">×</a>
+
+            <div class="section part3">
+                <div class="part-outer">
+                    <div class="part-inner">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="section part4">
+                <div class="part-outer">
+                    <div class="part-inner"></div>
                 </div>
             </div>
 
         </div>
 
-        <!-- 外链JS -->
-        <script src="./js/libs/jquery.min.js"></script>
-        <script src="./js/libs/typed.min.js"></script>
-        <script src="./js/libs/jquery.fullpage.min.js"></script>
-        <script src="./js/libs/message.min.js"></script>
+        <!-- 弹窗区域 -->
+        <div class="pop-model" id="pop-story">
+            <div class="pop-story-cont">
+                <a class="pop-close" href="javascript:closePop('pop-story')">×</a>
+            </div>
+        </div>
+        <div class="pop-model" id="ie-pop">
+            <div class="pop-story-cont">
+                <a class="pop-close" href="javascript:closePop('pop-story')">×</a>
+            </div>
+        </div>
 
-        <!-- Project JS Link -->
-        <script src="./js/data.js"></script>
-        <script src="./js/index.js"></script>
-        <script src="./js/context.js"></script>
-	</body>
+    </div>
+
+    <!-- 外链JS -->
+    <script src="./js/libs/jquery.min.js"></script>
+    <script src="./js/libs/typed.min.js"></script>
+    <script src="./js/libs/jquery.fullpage.min.js"></script>
+    <script src="./js/libs/message.min.js"></script>
+
+    <!-- Project JS Link -->
+    <script src="./js/data.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/context.js"></script>
+</body>
 
 
 
