feat: update part3model

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
                         <div class="part2-right">
                             <!-- <h1 class="part2-title">basic info</h1>-->
                             <div class="detail-list"></div>
-                            <div class="self-intro">
-
-                            </div>
+                            <div class="self-intro"></div>
                         </div>
                     </div>
                 </div>
@@ -73,7 +71,17 @@
             <div class="section part3">
                 <div class="part-outer">
                     <div class="part-inner">
+                        <div class="part3-title-model">
+                            <span class="part3-title font-type1-size28">Project Experience</span>
+                            <div class="part3-title-line"></div>
+                        </div>
+                        <div class="product-list">
+                            <div class="product-item" style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF">
 
+                            </div>
+                            <div class="product-item"></div>
+                            <div class="product-item"></div>
+                        </div>
                     </div>
                 </div>
             </div>
