feat: add part3 load animation

--- a/index.html
+++ b/index.html
@@ -76,11 +76,21 @@
                             <div class="part3-title-line"></div>
                         </div>
                         <div class="product-list">
-                            <div class="product-item" style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF">
+                            <div class="product-item corp" style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF">
+                                <div class="product-item-container corp">
 
+                                </div>
                             </div>
-                            <div class="product-item"></div>
-                            <div class="product-item"></div>
+                            <div class="product-item person" style="--bot-color1:#e23e30AA;--bot-color2:#e23e30FF">
+                                <div class="product-item-container person">
+
+                                </div>
+                            </div>
+                            <div class="product-item communal" style="--bot-color1:#0db85eAA;--bot-color2:#0db85eFF">
+                                <div class="product-item-container communal">
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -112,6 +122,7 @@
     <script src="./js/libs/jquery.min.js"></script>
     <script src="./js/libs/typed.min.js"></script>
     <script src="./js/libs/jquery.fullpage.min.js"></script>
+    <script src="./js/libs/gsap.min.js"></script>
     <script src="./js/libs/message.min.js"></script>
 
     <!-- Project JS Link -->
