feat: add product-item show animation

--- a/index.html
+++ b/index.html
@@ -76,21 +76,15 @@
                             <div class="part3-title-line"></div>
                         </div>
                         <div class="product-list">
-                            <div class="product-item corp" style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF">
-                                <div class="product-item-container corp">
+                            <div class="product-item" data-tag="corp"
+                                 style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF"></div>
+                            <div class="product-item" data-tag="person"
+                                 style="--bot-color1:#e23e30AA;--bot-color2:#e23e30FF"></div>
+                            <div class="product-item" data-tag="communal"
+                                 style="--bot-color1:#0db85eAA;--bot-color2:#0db85eFF"></div>
+                        </div>
+                        <div class="product-item-container corp">
 
-                                </div>
-                            </div>
-                            <div class="product-item person" style="--bot-color1:#e23e30AA;--bot-color2:#e23e30FF">
-                                <div class="product-item-container person">
-
-                                </div>
-                            </div>
-                            <div class="product-item communal" style="--bot-color1:#0db85eAA;--bot-color2:#0db85eFF">
-                                <div class="product-item-container communal">
-
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
