feat: update project dom and functionality

--- a/index.html
+++ b/index.html
@@ -77,14 +77,37 @@
                         </div>
                         <div class="product-list">
                             <div class="product-item" data-tag="corp"
-                                 style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF"></div>
+                                 style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF">
+                                <h1 class="title">Corporate Projects</h1>
+                                <a href="javascript:void(0)" class="product-item-close">×</a>
+                            </div>
                             <div class="product-item" data-tag="person"
-                                 style="--bot-color1:#e23e30AA;--bot-color2:#e23e30FF"></div>
+                                 style="--bot-color1:#e23e30AA;--bot-color2:#e23e30FF">
+                                <h1 class="title">Individual Projects</h1>
+                                <a href="javascript:void(0)" class="product-item-close">×</a>
+                            </div>
                             <div class="product-item" data-tag="communal"
-                                 style="--bot-color1:#0db85eAA;--bot-color2:#0db85eFF"></div>
+                                 style="--bot-color1:#0db85eAA;--bot-color2:#0db85eFF">
+                                <h1 class="title">Community Projects</h1>
+                                <a href="javascript:void(0)" class="product-item-close">×</a>
+                            </div>
                         </div>
                         <div class="product-item-container corp">
-
+                            <div class="scroll-box">
+                                <div class="project-item">
+                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
+                                    <div class="title">QQ三国 2023年周年庆新服:皇榜征兵</div>
+                                </div>
+                                <div class="project-item">
+                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
+                                </div>
+                                <div class="project-item">
+                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
+                                </div>
+                                <div class="project-item">
+                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
