feat: update project-experience-model

--- a/index.html
+++ b/index.html
@@ -75,38 +75,13 @@
                             <span class="part3-title font-type1-size28">Project Experience</span>
                             <div class="part3-title-line"></div>
                         </div>
-                        <div class="product-list">
-                            <div class="product-item" data-tag="corp"
-                                 style="--bot-color1:#87CEEBAA;--bot-color2:#87CEEBFF">
-                                <h1 class="title">Corporate Projects</h1>
-                                <a href="javascript:void(0)" class="product-item-close">×</a>
-                            </div>
-                            <div class="product-item" data-tag="person"
-                                 style="--bot-color1:#e23e30AA;--bot-color2:#e23e30FF">
-                                <h1 class="title">Individual Projects</h1>
-                                <a href="javascript:void(0)" class="product-item-close">×</a>
-                            </div>
-                            <div class="product-item" data-tag="communal"
-                                 style="--bot-color1:#0db85eAA;--bot-color2:#0db85eFF">
-                                <h1 class="title">Community Projects</h1>
-                                <a href="javascript:void(0)" class="product-item-close">×</a>
-                            </div>
-                        </div>
-                        <div class="product-item-container corp">
-                            <div class="scroll-box">
-                                <div class="project-item">
-                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
-                                    <div class="title">QQ三国 2023年周年庆新服:皇榜征兵</div>
+                        <div class="swiper part3-swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+
                                 </div>
-                                <div class="project-item">
-                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
-                                </div>
-                                <div class="project-item">
-                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
-                                </div>
-                                <div class="project-item">
-                                    <div class="img_bg" style="background-image:url(./images/proj_qqsg.jpg);"></div>
-                                </div>
+                                <div class="swiper-slide">Slide 2</div>
+                                <div class="swiper-slide">Slide 3</div>
                             </div>
                         </div>
                     </div>
@@ -141,6 +116,7 @@
     <script src="./js/libs/jquery.fullpage.min.js"></script>
     <script src="./js/libs/gsap.min.js"></script>
     <script src="./js/libs/message.min.js"></script>
+    <script src="./js/libs/swiper8.min.js"></script>
 
     <!-- Project JS Link -->
     <script src="./js/data.js"></script>
