--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
                         </div>
                         <div class="swiper part3-swiper">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-
-                                </div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
+                                <div class="swiper-slide"></div>
                             </div>
                         </div>
                     </div>
