feat: add part4 struct and remove old dom function

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <div class="wrap">
         <div class="content" id="content">
+
             <div class="section part1">
                 <div class="part-outer">
                     <div class="part-inner">
@@ -86,7 +87,27 @@
 
             <div class="section part4">
                 <div class="part-outer">
-                    <div class="part-inner"></div>
+                    <div class="part-inner">
+                        <div class="part4-title-model">
+                            <span class="part4-title font-type1-size28">Replenishment</span>
+                            <div class="part4-title-line"></div>
+                        </div>
+                        <div class="image-swiper-cont">
+                            <div class="title">Life Photos</div>
+                            <div class="image-swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"></div>
+                                    <div class="swiper-slide"></div>
+                                    <div class="swiper-slide"></div>
+                                    <div class="swiper-slide"></div>
+                                    <div class="swiper-slide"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="link-cont">
+
+                        </div>
+                    </div>
                 </div>
             </div>
 
