feat: add links and add images

--- a/index.html
+++ b/index.html
@@ -96,16 +96,34 @@
                             <div class="title">Life Photos</div>
                             <div class="image-swiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"></div>
-                                    <div class="swiper-slide"></div>
-                                    <div class="swiper-slide"></div>
-                                    <div class="swiper-slide"></div>
-                                    <div class="swiper-slide"></div>
+                                    <div class="swiper-slide"><img src="./images/photos/p1.jpg"></div>
+                                    <div class="swiper-slide"><img src="./images/photos/p2.jpg"></div>
+                                    <div class="swiper-slide"><img src="./images/photos/p3.jpg"></div>
+                                    <div class="swiper-slide"><img src="./images/photos/p4.jpg"></div>
+                                    <div class="swiper-slide"><img src="./images/photos/p1.jpg"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="link-cont">
-
+                            <div class="title">Other Link</div>
+                            <ul class="link-list">
+                                <li>
+                                    Github:
+                                    <a href="https://github.com/CafeKiller" target="_blank">https://github.com/CafeKiller</a>
+                                </li>
+                                <li>
+                                    Gitee:
+                                    <a href="https://gitee.com/coffeekiller002" target="_blank">https://gitee.com/coffeekiller002</a>
+                                </li>
+                                <li>
+                                    BiliBili:
+                                    <a href="https://space.bilibili.com/248826433">https://space.bilibili.com/248826433</a>
+                                </li>
+                                <li>
+                                    Blog:
+                                    <a href="https://cafekiller.github.io/">https://cafekiller.github.io/</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
